src/components/Dashboard.scss
@use "../styles/mixins";
@use "../styles/variables";

.dashboard {
  display: flex;
  height: 100vh;
  width: 100vw;
}

.main-content {
  flex: 1;
  @include mixins.flex-column;
  overflow: hidden;
  padding: 2rem;
}

.dashboard-body {
  flex: 1;
  padding: variables.$spacing-md 0;
  @include mixins.scrollable;
  @include mixins.flex-column;
  gap: variables.$spacing-3xl;
}

.dashboard-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(4, min-content);
  grid-template-areas: 
    "companyDetails marketCapDetails triangleGraphLegend risksTitle"
    "ucoZDetails dataDetails triangleGraph risksValues"
    "changeLiquidityGroup steeringIndices steeringIndices steeringIndices"
    "groupDetails steeringIndices steeringIndices steeringIndices";
  gap: variables.$spacing-lg;
}

.data-header {
  color: variables.$text-primary;
  @include mixins.text-mid;
  font-weight: 600;
}

.left-panel {
  @include mixins.flex-column;
  gap: variables.$spacing-3xl;
}

.accent {
  color: variables.$accent-orange;
}

.company-details {
  ul {
    list-style: none;
    border-left: 4px solid variables.$secondary-bg;
    padding-left: variables.$spacing-xl;
    li {
      margin: 2px 0;
    }
  }

  padding: variables.$spacing-md variables.$spacing-xl;
  background-color: white;
  border-radius: 10px;
  color: variables.$text-dark;
}

.uco-z-details {
  background: white;
  height: 100%;
  border-radius: 10px;
  padding: variables.$spacing-xl variables.$spacing-xl;
  grid-area: ucoZDetails;

  .uco-details {
    @include mixins.flex-column;
    color: variables.$text-dark;
    gap: variables.$spacing-xs;

    .uco-item {
      display: flex;
      align-items: center;
      color: variables.$text-dark;
      gap: variables.$spacing-sm;

      .uco-label {
        background-color: variables.$accent-blue-dark;
        color: variables.$text-primary;
        padding: variables.$spacing-xs variables.$spacing-sm;
        @include mixins.text-small;
        font-weight: 600;
        text-align: center;
      }
    }
  }

  .z-details {
    margin-top: variables.$spacing-4xl;
    display: flex;
    justify-content: space-between;
    color: variables.$text-dark;

    .z-item {
      width: 50%;
      @include mixins.flex-column;
      color: variables.$text-dark;
      gap: variables.$spacing-sm;

      .z-label {
        @include mixins.text-medium;
        color: variables.$text-dark;
        font-weight: 400;
      }

      p {
        @include mixins.heading-large;
        font-weight: 600;
        color: variables.$accent-orange;
      }
    }
  }
}

.market-cap-details {
  @include mixins.flex-column;
  grid-area: marketCapDetails;
  gap: 5px;

  & > div {
    border-left: 4px solid variables.$secondary-bg;
    padding-left: variables.$spacing-xl;
  }

  color: variables.$text-dark;
  font-size: 24px;
  padding: 11px variables.$spacing-xl;
  background-color: white;
  border-radius: 10px;

  .market-cap-label {
    @include mixins.text-medium;
    font-size: 20px;
    color: variables.$text-dark;
    font-weight: normal;
  }

  .market-cap-value {
    @include mixins.heading-large;
    font-weight: 500;
    color: variables.$accent-orange;
  }
}

.data-details {
  @include mixins.flex-column;
  @include mixins.text-medium;
  grid-area: dataDetails;
  gap: variables.$spacing-xs;
  padding: variables.$spacing-xl variables.$spacing-xl;
  color: variables.$text-dark;

  background: white;
  height: 100%;
  border-radius: 10px;
  justify-content: flex-end;

  & > div {
    padding-left: variables.$spacing-xl;
    border-left: 4px solid variables.$secondary-bg;
  }

  .data-label {
    @include mixins.text-medium;
    color: variables.$text-dark;
    font-size: 24px;
    font-weight: normal;
  }

  p {
    @include mixins.heading-large;
    font-weight: 500;
  }
}

.triangle-graph-legend {
  grid-area: triangleGraphLegend;
  padding: variables.$spacing-xl variables.$spacing-xl;
  background-color: white;
  border-radius: 10px;
  @include mixins.flex-column;
  gap: variables.$spacing-sm;
}

.triangle-graph {
  grid-area: triangleGraph;
  background: white;
  height: 100%;
  padding: variables.$spacing-3xl variables.$spacing-sm variables.$spacing-md 0;
  border-radius: 10px;
}

.risks-title {
  grid-area: risksTitle;
  h1 {
    @include mixins.heading-large;
    font-weight: 300;
    padding: variables.$spacing-3xl variables.$spacing-sm variables.$spacing-sm variables.$spacing-xl;
    color: variables.$accent-orange;
    text-transform: uppercase;
    border-radius: 10px;
    margin-bottom: variables.$spacing-sm;
    background-color: variables.$text-tertiary;
    height: 100%;
  }
}
.risks-values {
  @include mixins.flex-column;
  grid-area: risksValues;
  justify-content: space-evenly;
  border-radius: 10px;
  background-color: variables.$accent-blue-dark;
  gap: variables.$spacing-xs;
  padding: variables.$spacing-3xl variables.$spacing-xl;

  .risk-values-item {
    .risk-label {
      @include mixins.text-medium;
      font-weight: 300;
    }

    p {
      @include mixins.heading-xlarge;
      font-weight: 300;
    }
  }
}

.change-liquidity-group {
  @include mixins.flex-column;
  grid-area: changeLiquidityGroup;
  gap: variables.$spacing-2xl;
  background: variables.$text-tertiary;
  padding: variables.$spacing-2xl variables.$spacing-xl variables.$spacing-xl variables.$spacing-xl;
  border-radius: 10px;
  align-self: start;

  .change-details,
  .liquidity-details {
    @include mixins.flex-column;
    border-left: 4px solid variables.$secondary-bg;
    padding-left: variables.$spacing-xl;
    color: variables.$text-dark;
  
    .change-label,
    .liquidity-label {
      @include mixins.text-medium;
      color: variables.$text-dark;
      font-size: 20px;
      font-weight: normal;
    }
  
    .change-value,
    .liquidity-value {
      @include mixins.heading-large;
      font-weight: 300;
      color: variables.$accent-orange;
    }
  }
}


.group-details {
  grid-area: groupDetails;
  height: min-content;
  align-self: end;
  background: white;
  padding: variables.$spacing-2xl variables.$spacing-xl variables.$spacing-xl variables.$spacing-xl;
  border-radius: 10px;
  position: relative;

  &::after {
    content: "";
    display: block;
    width: 100%;
    border-bottom: 8px solid variables.$accent-blue-dark;
    position: absolute;
    left: 0;
    bottom: -(variables.$spacing-2xl);
  }

  & > div {
    border-left: 4px solid variables.$secondary-bg;
    padding-left: variables.$spacing-xl;
  }

  .group-label {
    @include mixins.text-medium;
    color: variables.$text-dark;
    font-size: 20px;
    font-weight: normal;
  }

  .group-value {
    @include mixins.heading-large;
    font-weight: 300;
    color: variables.$accent-orange;
  }
}

